# user-microservice

./: .codecov.yml  .env  .gitignore  Dockerfile  Dockerfile.prod  Metas.py  Metricas.py  PlanEntrenamiento.py  README.md  WrongNumberOfArguments.py  codecov.yml  docker-compose.yaml  entrypoint-heroku.sh  main.py  main_test.py  pyproject.toml  response.py  test_main.py  user.py  usersTest.py
.github/workflows/: checks.yml  deploy.yml  dev-checks.yml
app/: Metas.py  Metricas.py  PlanEntrenamiento.py  api.py  controller_example.py  credentials.py  definitions.py  log_config.py  main.py  response.py  services.py  urls.py
app/auth/: google_login.py  google_signup.py  google_singup.py  login.py  password_reset.py  signup.py
app/config/: auth_baerer.py  auth_settings.py  config.py  credentials.py  twilio.py
app/domain/: UserRoles.py  token_generator.py
app/publisher/: message_queue.py  publisher_queue.py  publisher_queue_middleware.py  queue_settings.py
app/settings/: auth_baerer.py  auth_settings.py  config.py  twilio.py
app/user/: block_user.py  follow_user.py  interest_user.py  login_users.py  routes_notifications.py  routes_users.py  training_small.py  user.py  utils.py
datadog-config/: datadog.yaml
tests/: test_main.py
tests/app/auth/: test_google.py  test_login.py  test_resetpassword.py  test_signup.py  test_singup.py
tests/app/user/: test_blocked_users.py  test_delete_users.py  test_favorite_trainings.py  test_followers.py  test_get_users.py  test_interest_users.py  test_list_users.py  test_me_users.py  test_password_reset.py  test_update_users.py  test_user.py
tests/e2e/: test_e2e_user.py
tests/features/: user.feature
tests/features/steps/: user_steps.py
tests/user/: test_routes_users.py  test_user.py  tests_blocked_users.py  tests_get_users.py  tests_list_users.py  tests_update_users.py
