[tool.poetry]
name = "fast-api-example"
version = "0.1.0"
description = "Basic FastAPI service"
authors = ["Federico Pacheco <fpacheco@fi.uba.ar>", "Martina Panetta <mpanetta@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0" 
uvicorn = "^0.14.0"
python-dotenv = "^0.17.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
pymongo = "^4.3.3"
passlib = "^1.7.4"
flake8 = { version = "^3.9.0", optional = true }
black = { version = "^22.3.0", optional = true }
pytest = { version = "^6.2.5", optional = true }
pytest-cov = { version = "^2.11.1", optional = true }
httpx = { version = "^0.23.0", optional = true }
requests = { version = "^2.28.2", optional = true }
behave = { version = "^1.2.6", optional = true }
mongomock = { version = "^4.1.2", optional = true }
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"
sendgrid = "^6.10.0"
twilio = "^8.1.0"
google-auth = "^2.17.3"
google-oauth2-tool = "^0.0.3"
google = "^3.0.0"
python-social-auth = "^0.3.6"
firebase-admin = "^6.1.0"

[tool.poetry.extras]
dev = ["flake8", "black", "passlib", "pytest", "pytest-cov", "httpx", "requests", "behave", "mongomock"]

[tool.black]
line-length = 88
skip-string-normalization = true